# tms_submod

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp  matrix.h  min_norm_point.cpp  minimizer.h  perf_log.h  submodular.h  submodular_fn.h  util.cpp  util.h  vector.h
fujishige/: fw.c  quicksort.c  wrapper.cpp  wrapper.h
la/: inc_qr_matrix.h  list_matrix.h  matrix.cpp  matrix.h  vector.cpp  vector.h
minimizers/: away_steps.h  brs_mnp.h_old  bvh.h  bvh2.h  frank_wolfe.h  fujishige_wolfe.h  mnp.h  mnp2.h  mnp3.h  mnp_fw.h  mnp_old.h  mnp_order_k.h  pairwise.h
module/: CMakeLists.txt  dsf.ipynb  libpymnp.cpp  mnp.py
perf/: perf.cpp  perf.h
set_fn/: coverage.h  deep.h  graph_cut.h  hypergraph_cut.h  iwata_test.h  log_det.h  plus_modular.h  scmm.h  st_constrain.h  submodular.h  sum_submodular.h
test/: bench.cpp  bench.h  validate.cpp  validate.h
test/validate/: validate.cpp
